# physical-ai-robotics-hassanrj

./: .mcp.json  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_NOTE.md  GEMINI.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  temp_spec.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env  AUTH_QUICKSTART.md  DEBUG_SIGNUP.md  FIX_EMAIL_CONFIRMATION.md  NEON_SETUP.md  README.md  START_SERVER.md  SUPABASE_SETUP.md  env.example  ingest_data.py  main.py  pyproject.toml  test_chatbot.py  test_signup.py
backend/.claude/: settings.local.json
backend/auth/: middleware.py  routes.py  utils.py
backend/chatbot/: __init__.py  agent.py  qdrant_retriever.py
backend/config/: __init__.py  supabase_client.py
backend/database/: connection.py  schema.sql
backend/models/: schemas.py  user.py
backend/services/: user_service.py
docs/: intro.md
docs/chapter-01-physical-ai/: autonomy.md  conclusion.md  core-principles.md  digital-to-physical.md  embodiment.md  index.md  learning-from-interaction.md  motor-action.md  sensory-perception.md
docs/chapter-02-ros2/: actions.md  communication-patterns.md  conclusion.md  dds.md  index.md  urdf.md
docs/chapter-03-simulation/: conclusion.md  index.md  platforms.md  unity.md
docs/chapter-04-nvidia-isaac/: conclusion.md  index.md  isaac-ros.md  sim-to-real.md
docs/chapter-05-vla/: conclusion.md  index.md
docs/chapter-06-humanoid/: bipedal-locomotion.md  conclusion.md  hri.md  (+2 more)
tests/: auth-flow.test.md  data-ingestion.test.md  frontend-navigation.test.md  rag-chatbot.test.md
(+123 files in other folders)
